<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    tools:context=".ui.NoteFormFragment">


    <EditText
        android:id="@+id/form_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/title_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/form_tags_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/tags"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="4"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/form_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/note_it_all_here"
            android:imeOptions="actionGo"
            android:inputType="textMultiLine"
            android:paddingHorizontal="19dp"
            android:paddingVertical="12dp" />
    </ScrollView>

    <Button
        android:id="@+id/form_done_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/done" />
</LinearLayout>