<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NotesListFragment"
    tools:showIn="@layout/activity_main">

    <SearchView
        android:id="@+id/notes_search"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:queryHint="@string/search_for_tags"
        app:layout_constraintEnd_toStartOf="@+id/sort_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/notes_list" />

    <ImageButton
        android:id="@+id/sort_image_button"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:contentDescription="@string/sort_notes"
        android:src="@drawable/ic_sort_primary_24dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notes_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/notes_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="5"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_search"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/note_row" />

    <TextView
        android:id="@+id/empty_list_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_notes_message"
        android:visibility="gone"
        android:textSize="@dimen/empty_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="@+id/notes_list"
        app:layout_constraintEnd_toEndOf="@+id/notes_list"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/notes_list"
        app:layout_constraintTop_toTopOf="@+id/notes_list"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>